<package format="2">
  <name>hello_world</name>
  <version>0.0.0</version>
  <description>A simple Hello World package</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
