<?xml version="1.0"?>
<package format="3">
  <name>camera</name>
  <version>0.0.0</version>
  <description>ROS2 package for publishing and subscribing float arrays</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- 依存関係 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_type>ament_python</build_type>
</package>
